lightbox: Fix alignment of x button in image view menu.
Fixes #19711.

--- a/static/styles/lightbox.css
+++ b/static/styles/lightbox.css
@@ -43,7 +43,7 @@
 
         color: hsla(0, 0%, 100%, 0.8);
         font-size: 2rem;
-        margin: 24px 20px 0 0;
+        margin: 11px 20px 0 0;
 
         transform: scaleY(0.75);
         font-weight: 300;
